--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,14 +96,24 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/openA"
+                    android:id="@+id/openA2"
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openA1"
-                    android:text="OPEN A1" />
+                    android:onClick="openA2"
+                    android:text="OPEN A2" />
+
+                <Button
+                    android:id="@+id/openA3"
+                    style="@style/buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="16dp"
+                    android:onClick="openA3"
+                    android:text="OPEN A3" />
 
                 <Button
                     android:id="@+id/openB1"
@@ -122,105 +132,72 @@
                     android:layout_marginTop="16dp"
                     android:onClick="openB2"
                     android:text="OPEN B2" />
-
                 <Button
-                    android:id="@+id/openC1"
+                    android:id="@+id/openB3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openC1"
-                    android:text="OPEN C1" />
-
+                    android:onClick="openB3"
+                    android:text="OPEN B3" />
                 <Button
-                    android:id="@+id/openC2"
+                    android:id="@+id/openB3_PNC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openC2"
-                    android:text="OPEN C2" />
-
+                    android:onClick="openB3_PNC"
+                    android:text="OPEN B3 PNC" />
                 <Button
-                    android:id="@+id/openC3"
+                    android:id="@+id/openB4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openC3"
-                    android:text="OPEN C3" />
-
+                    android:onClick="openB4"
+                    android:text="OPEN B4" />
                 <Button
-                    android:id="@+id/openC4"
+                    android:id="@+id/openB4_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openC4"
-                    android:text="OPEN C4" />
-
+                    android:onClick="openB4_2"
+                    android:text="OPEN B4_2" />
                 <Button
-                    android:id="@+id/openC5"
+                    android:id="@+id/openB4_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openC5"
-                    android:text="OPEN C5" />
-
+                    android:onClick="openB4_3"
+                    android:text="OPEN B4_3" />
                 <Button
-                    android:id="@+id/openC6"
+                    android:id="@+id/openB4_4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openC6"
-                    android:text="OPEN C6" />
-
+                    android:onClick="openB4_4"
+                    android:text="OPEN B4_4" />
                 <Button
-                    android:id="@+id/openD1"
+                    android:id="@+id/openB4_5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openD1"
-                    android:text="OPEN D1" />
+                    android:onClick="openB4_5"
+                    android:text="OPEN B4_5" />
 
                 <Button
-                    android:id="@+id/openD2"
+                    android:id="@+id/openC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="openD2"
-                    android:text="OPEN D2" />
+                    android:onClick="openC"
+                    android:text="OPEN C" />
 
-                <Button
-                    android:id="@+id/openD3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="16dp"
-                    android:onClick="openD3"
-                    android:text="OPEN D3" />
-
-                <Button
-                    android:id="@+id/openE"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="16dp"
-                    android:onClick="openE"
-                    android:text="OPEN E" />
-
-                <Button
-                    android:id="@+id/openF"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="16dp"
-                    android:onClick="openF"
-                    android:text="OPEN F" />
 
             </LinearLayout>
 
