--- a/app/src/main/res/layout/activity_section_b3.xml
+++ b/app/src/main/res/layout/activity_section_b3.xml
@@ -761,26 +761,26 @@
 
                     <RadioButton
                         android:id="@+id/kbc10a"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:text="@string/kbc10a" />
 
                     <RadioButton
                         android:id="@+id/kbc10b"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:text="@string/kbc10b" />
                     <RadioButton
                         android:id="@+id/kbc10c"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:text="@string/kbc10c" />
                     <RadioButton
                         android:id="@+id/kbc10d"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:text="@string/kbc10d" />
@@ -1317,7 +1317,8 @@
                     android:hint="@string/hours"
                     android:inputType="number"
                     android:maxLength="2"
-                    android:visibility="visible" />
+                    android:text='@{kbc19b.checked ? kbc19hr.getText.toString : ""}'
+                    android:visibility='@{kbc19b.checked ? View.VISIBLE : View.GONE}'/>
 
                 <RadioButton
                     android:id="@+id/kbc19c"
@@ -1336,7 +1337,10 @@
                     android:hint="@string/days"
                     android:inputType="number"
                     android:maxLength="2"
-                    android:visibility="visible" />
+
+                    android:text='@{kbc19c.checked ? kbc19day.getText.toString : ""}'
+                    android:visibility='@{kbc19c.checked ? View.VISIBLE : View.GONE}'
+                    />
 
                 <RadioButton
                     android:id="@+id/kbc19d"
