--- a/app/src/main/res/layout/sync_list_adapter.xml
+++ b/app/src/main/res/layout/sync_list_adapter.xml
@@ -29,7 +29,9 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent"
                 android:background="@color/red"
-                android:elevation="@dimen/_4sdp"></FrameLayout>
+                android:elevation="@dimen/_4sdp">
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -70,7 +72,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="@dimen/_5sdp"
-                    android:background="@color/black"></FrameLayout>
+                    android:background="@color/black">
+
+                </FrameLayout>
 
                 <TextView
                     android:id="@+id/tv_msg"
