--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,7 +55,8 @@
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">24sp</item>
         <item name="android:typeface">serif</item>
-        <item name="android:paddingTop">24dp</item>
+        <!--<item name="android:paddingTop">24dp</item>-->
+        <item name="android:paddingTop">18dp</item>
         <item name="android:elevation">1dp</item>
 
 
