--- a/app/src/main/res/layout/activity_section_a3.xml
+++ b/app/src/main/res/layout/activity_section_a3.xml
@@ -2221,7 +2221,7 @@
                 android:textColor="@android:color/white" />
 
             <EditText
-                android:id="@+id/kac2496"
+                android:id="@+id/kac2496x"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
